[package]
name = "counter-solana-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.3"
#solana-program = "2.0"
solana-program = "3.0.0"


[dev-dependencies]
solana-sdk = "3.0.0"
mollusk-svm = { path = "../../mollusk/harness", version = "0.7.0" }
